# uavsar

./: LICENSE  README.md  pyproject.toml
src/uavsar/: __init__.py  cli.py  core.py
tests/: test_core.py
